Fixed grad page on small screens

--- a/sass/graduates.scss
+++ b/sass/graduates.scss
@@ -31,6 +31,11 @@
     height: 258px;
     border: 6px solid white;
     box-shadow: 0px 0px 3px 1px #D3D3D3;
+
+    @media only screen and (max-width: 479px) {
+      width: 100%;
+      height: auto;
+    }
   }
 
   @media (max-width: 720px){
@@ -104,7 +109,6 @@
   }
 
   @media (max-width: 419px){
-    width: 270px;
     margin: 0 30px;
 
     .available-button {
